--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@
 header {
     background-color: black;
     height: 50px;
+    position: fixed;
+    width: 100%;
+    height: 100%;
 }
 
 .col-100 {
@@ -27,13 +30,12 @@ header {
 
 main {
     height: calc(100vh - 130px);
-    background-color: aquamarine;
+    background-color: black;
 }
 
 .container {
     width: 90%;
     height: 100%;
-    background-color: blue;
     margin: 0 auto;
 }
 
@@ -69,31 +71,67 @@ img {
 
 footer .row {
     height: 80px;
-    background-color: black;
     display: flex;
+    position: fixed;
+    width: 100%;
 }
-.col-33 {
-    width: calc(100% / 3);
+.col-60, .col-20 {
     height: 100%;
-    background-color: rgb(57, 117, 169);
+    background-color: rgb(63, 63, 63);
     color: white;
     display: flex;
-    align-items: center;
 }
 
+.col-60 {
+    width: 40%;
+}
+
+.col-20 {
+    width: 30%;
+}
+
+
 .button-zone {
-    width: calc(100% / 8);
+    width: calc(100% / 7);
+    text-align: center;
+    position: relative;
+    top: 10px;
 }
 
 .icon {
-    font-size: xx-large;
+    font-size: x-large;
 }
 
 .fa-angle-up {
     font-size: x-small;
-    margin-left: 10px;
+    margin-left: 5px;
 }
 
 span {
     font-size: x-small;
+    position: relative;
+    top: 10px;
+}
+
+.green {
+    color: greenyellow;
+}
+
+.dx {
+    display: flex;
+    justify-content: end;
+}
+
+.end {
+    color: red;
+    background-color: gray;
+    padding: 0px 20px;
+    width: 50%;
+    text-align: center;
+    position: relative;
+    padding-top: 30px;
+}
+
+main, footer {
+    padding-top: 50px;
 }
