--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ header {
 /* header */
 
 main {
-    height: calc(100vh - 130px);
+    height: calc(100vh - 150px);
     background-color: black;
 }
 
@@ -59,7 +59,7 @@ img {
 
 .microphone {
     position: absolute;
-    top: 80%;
+    top: 70%;
     font-size: x-small;
     font-weight: bold;
     color: white;
@@ -90,13 +90,42 @@ footer .row {
     width: 30%;
 }
 
+.row-cover {
+    display: flex;
+    width: 100%;
+    height: 20px;
+    position: relative;
+    top: 80px;
+}
+
+.col-cover {
+    background-color: rgb(63, 63, 63);
+    width: 85%;
+}
+
+.col-cover-gray {
+    background-color: gray;
+    width: 15%;
+}
+
+.col-cover, .col-cover-gray {
+    height: 20px;
+}
 
 .button-zone {
     width: calc(100% / 7);
     text-align: center;
     position: relative;
-    top: 10px;
+    top: 28px;
+    transition: all 0.5s linear;
 }
+
+.button-zone:hover {
+    position: relative;
+    top: 8px;
+}
+
+
 
 .icon {
     font-size: x-large;
